# tatoeba_parser

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  dataset.h  download_tatoeba_sentences.sh  fast_link_parser.cpp  fast_link_parser.h  fast_sentence_parser.cpp  fast_sentence_parser.h  file_mapper.h  filter.h  filter_dependent.cpp  filter_dependent.h  filter_id.h  filter_lang.h  filter_language.cpp  filter_language.h  filter_link.h  filter_regex.cpp  filter_regex.h  filter_tag.cpp  filter_tag.h  filter_translation.cpp  filter_translation.h  filter_translation_regex.h  launch_on_avd.sh  linkset.cpp  linkset.h  main.cpp  options.cpp  (+12 more)
include/: Makefile.am
include/tatoparser/: dataset.h  interface_lib.h  linkset.h  listset.h  namespace.h  sentence.h  tagset.h
m4/: android.m4
src/: Makefile.am  Makefile.in  androgenizer  android.cpp  datainfo.h  dataset.cpp  dataset.h  display.cpp  display.h  fast_link_parser.cpp  fast_link_parser.h  fast_list_parser.h  fast_sentence_adv_parser.h  fast_sentence_parser.cpp  fast_sentence_parser.h  fast_tag_parser.cpp  fast_tag_parser.h  file_mapper.cpp  file_mapper.h  filter.h  filter_fuzzy.h  filter_helper_translation.h  filter_id.h  filter_idlist.h  filter_lang.h  filter_link.h  filter_list.h  filter_regex.h  filter_tag.h  filter_translatable_in_language.h  filter_translation_regex.h  filter_user.h  hdownload.hpp  interface_lib.cpp  linkset.cpp  linkset.h  listset.cpp  main.cpp  options.cpp  options.h  (+10 more)
src/java/: AndroidManifest.xml  Makefile.in  tatoparser.keystore
src/java/res/layout/: activity_search.xml
src/java/res/values/: strings.xml
src/java/src/com/qdii/tatoparser/: ActivitySearch.java  Sentence.java
unittests/: Makefile.am  allTests.sh  links.csv  lists.csv  sentences.csv  sentences.csv.corrupted  sentences_detailed.csv  tags.csv  test0.sh  test1.sh  test10.sh  test11.sh  test12.sh  test13.sh  test14.sh  test15.sh  test16.sh  test17.sh  test18.sh  test19.sh  test2.sh  test20.sh  test21.sh  test23.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh  unittests_common.sh
valgrind/: valgrind.h
